components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "linuxserver/sonarr:3.0.10"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
            - name: downloads
              mountPath: /videos/import
            - name: shows
              mountPath: /videos/Shows
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: downloads
          hostPath:
            path: /mnt/downloads/import
            type: Directory
        - name: videos
          hostPath:
            path: /mnt/media/Shows
            type: Directory
        - name: downloads
          hostPath:
            path: /mnt/media
            type: Directory
